# tt-metal

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  Makefile  README.md  a.cpp  analyze_perf.ipynb  b.py  build_metal.sh  compare.py  conftest.py  conv_sandbox.py  download_embeddings.py  download_weights.py  enqueue_graph_example.cpp  erisc_app_direct_receive.hex  erisc_app_direct_send.hex  erisc_app_direct_transfer.hex  erisc_direct_transfer.cc  erisc_main.cc  export.sh  exprts_old.sh  flake.nix  generate_binaries.sh  git_bisect.sh  git_run.sh  heatmap.py  iterate.py  log.txt  loop-resnet.sh  make_sweep_sheet.py  model_kernel_perf.py  module.mk  no_credo_reset_mobo-ce-44.json  noc_addr_snapshot.txt  noc_nonblocking_api.h  (+36 more)
tt_metal/programming_examples/: CMakeLists.txt  module.mk
tt_metal/programming_examples/add_2_integers_in_compute/: add_2_integers_in_compute.cpp
tt_metal/programming_examples/debugging_and_profiling/: CMakeLists.txt  dprint_exercise1.cpp
tt_metal/programming_examples/elasticsearch_api/: elasticsearch_api.cpp
tt_metal/programming_examples/eltwise_binary/: eltwise_binary.cpp
tt_metal/programming_examples/eltwise_sfpu/: eltwise_sfpu.cpp
tt_metal/programming_examples/json_api/: json_api.cpp
tt_metal/programming_examples/learn_matmul/: compute_kernel.cpp  learn_matmul.cpp  reader_kernel.cpp
tt_metal/programming_examples/loopback/: loopback.cpp
tt_metal/programming_examples/matmul_common/: bmm_op.hpp  work_split.hpp
tt_metal/programming_examples/matmul_exercise/: CMakeLists.txt  (+7 more)
(+7153 files in other folders)
